# CypherGuard

./: .dockerignore  .env.backup  .gitignore  CHANGELOG.md  IDS_MVP_Academic_Documentation.md  QUICKSTART_TESTING.md  README.md  ai_subsystem_deep_dive.md  ai_subsystem_documentation.md  audit_files.txt  cypherguard_architecture.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  slides.html  standalone_demo.py  start_all.bat
alembic/: env.py
alertmanager/: alertmanager.yml
app/: AUDIT_REPORT.md  README.md
billing/: trial_checker.py  webhook_handler.py
control_plane/: decision_engine.py  decision_fallback_scanner.py  decision_log_writer.py  decision_timeout_listener.py
docker/: frontend.Dockerfile  nginx.conf  python.Dockerfile  redis-sentinel.conf
docs/: MOBILE_DEV_QUICKSTART.md  SecureNet_Mobile_API.postman_collection.json  architecture.md  database_erd.md  deployment_runbook.md  environment_setup.md  incident_response.md  ml_model.md  mobile_integration_guide.md  websocket_protocol.md
extractor/: main.py
firewall/: main.py
gateway/: main.py
ingest_gateway/: __init__.py  auth.py  main.py  monitor.py
llm_analyzer/: main.py
migrations/: 001_initial.sql
ml_engine/: README.md  auto_retrain.py  create_demo_model.py  feature_engineering.py  main.py  model_monitoring.py  train_production.py  train_real.ipynb
mobile_gateway/: main.py
prometheus/: alerts.yml  prometheus.yml
scripts/: cloud_setup.sh  ec2_deploy.sh  ec2_post_deploy.sh  ec2_setup.sh  generate_secrets.py  healthcheck.py
sensor/: Dockerfile  (+2 more)
(+246 files in other folders)
