[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securenet-soc"
version = "1.0.0"
description = "SecureNet SOC — AI-Powered Intrusion Detection System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "redis[hiredis]>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "bcrypt>=4.1",
    "PyJWT>=2.8",
    "httpx>=0.26",
    "joblib>=1.3",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "scapy>=2.5",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
include = ["shared*", "gateway*", "extractor*", "ml_engine*", "llm_analyzer*", "firewall*", "sniffer*", "simulator*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
